# cmake

./: CMakeKnowledge.md
Step1/: CMakeLists.txt
Step1/MathFunctions/: CMakeLists.txt
Step1/Tutorial/: CMakeLists.txt
Step10/SimpleTest/: CMakeLists.txt
Step10/TutorialProject/: CMakePresets.json
Step10/TutorialProject/Tests/: CMakeLists.txt  TestMathFunctions.cxx
Step10/TutorialProject/Tutorial/: CMakeLists.txt  Tutorial.cxx
Step10/install/lib/cmake/SimpleTest/: SimpleTestTargets.cmake
Step11/SimpleTest/: CMakeLists.txt
Step11/install/lib/cmake/SimpleTest/: SimpleTestTargets.cmake
Step2/: Exercise2.cmake  Exercise3.cmake
Step3/MathFunctions/: MathFunctions.cxx
Step3/Tutorial/: Tutorial.cxx
Step4/Tutorial/: CMakeLists.txt
Step5/: CMakePresets.json
Step5/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step5/MathFunctions/MathLogger/: CMakeLists.txt
Step5/Tutorial/: Tutorial.cxx
Step6/: CMakeLists.txt
Step6/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step7/MathFunctions/MakeTable/: CMakeLists.txt
Step8/: CMakeLists.txt
Step8/Tests/: CMakeLists.txt
Step9/: CMakeLists.txt
